1-zedna el AI (smart registration + welcome message bil AI hasb el user + AI search metawra {kolou show admin ikharajlk admin}+ ai profil ;) )